# cse571_project

./: .gitignore  Data_Loaders.py  Helper.py  Networks.py  README.md  SimulationEnvironment.py  SteeringBehaviors.py  __init__.py  collect_data.py  goal_seeking.py  pyproject.toml  submission.csv  train_model.py
collision_prediction/: Helper.py  SimulationEnvironment.py  collect_data.py
saved/: saved_model.pkl  scaler.pkl  training_data_100.csv  training_data_1000.csv
