[tool.poetry]
name = "collision-prediction"
version = "0.1.0"
description = ""
authors = ["swantrace <frederickhong.5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
