[tool.poetry]
name = "collision-prediction"
version = "0.1.0"
description = ""
authors = ["swantrace <frederickhong.5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.2"
pymunk = "5.7.0"
noise = "^1.2.2"
matplotlib = "^3.8.1"
pygame = "^2.5.2"
scikit-learn = "^1.3.2"
torch = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
